--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     }
     </style>
 </head>
-<body style="margin: 0px auto; background-color: #CCC; ">
+<body style="margin: 0px auto !important; background-color: #CCC; ">
+    <script type="text/javascript">
+      WebFontConfig = {
+        google: { families: [ 'Play::latin,cyrillic-ext' ] }
+      };
+      (function() {
+        var wf = document.createElement('script');
+        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+        wf.type = 'text/javascript';
+        wf.async = 'true';
+        var s = document.getElementsByTagName('script')[0];
+        s.parentNode.insertBefore(wf, s);
+      })(); </script>
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/phaser.min.js"></script>
     <script src="js/Game.js"></script>
