--- a/index.html
+++ b/index.html
@@ -2,30 +2,25 @@
 <html lang="en"> 
 <head>
     <meta charset="utf-8">
-    <title>Yahtzee</title>
+    <title>Yahtzee::Reload</title>
     <link rel="shortcut icon" href="/favicon.ico" />
     <style type="text/css">
     * {
         margin: 0;
         padding: 0;
     }
+    #game_box{
+        margin: 40px auto !important;
+        width: 800px;
+        height: 600px;
+        overflow: hidden;
+    }
     </style>
 </head>
-<body style="margin: 0px auto !important; background-color: #CCC; ">
-    <script type="text/javascript">
-      WebFontConfig = {
-        google: { families: [ 'Play::latin,cyrillic-ext' ] }
-      };
-      (function() {
-        var wf = document.createElement('script');
-        wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })(); </script>
+<body style="margin: 0px auto !important; background-color: #000; ">
     <script src="//ajax.googleapis.com/ajax/libs/webfont/1.4.7/webfont.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/phaser/2.4.4/phaser.min.js"></script>
     <script src="js/Game.js"></script>
+    <div id="game_box"></div>
 </body>
 </html>
