--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         height: 600px;
         overflow: hidden;
     }
+    canvas{vertical-align:middle; background-color:#000;}
     </style>
 </head>
 <body style="margin: 0px auto !important; background-color: #000; ">
